# openlogos-lab

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  demo.md  departments.md
salinas_lab/: __init__.py  cli.py
salinas_lab/audit/: __init__.py  log.py
salinas_lab/channels/: __init__.py  base.py  email.py  telegram.py  web.py
salinas_lab/chat/: __init__.py  roundtable.py
salinas_lab/config/: persona.md
salinas_lab/departments/: __init__.py  base.py
salinas_lab/departments/director/: README.md  agent.py  prompts.md  schema.py  tools.py
salinas_lab/departments/human_testing/: README.md  agent.py  prompts.md  schema.py  tools.py
salinas_lab/departments/product_applications/: agent.py  (+4 more)
salinas_lab/doctor/: __init__.py  checks.py
salinas_lab/dreaming/: __init__.py  monitor.py  sources.py  topic_picker.py
salinas_lab/gateway/: __init__.py  api.py
salinas_lab/graph/: __init__.py  pipeline.py  state.py
salinas_lab/memory/: __init__.py  self_learning.py  store.py
salinas_lab/models/: __init__.py  client.py  health.py  router.py
salinas_lab/reports/: __init__.py  writer.py
salinas_lab/security/: __init__.py  redaction.py
salinas_lab/ui/: __init__.py  assets.py  command_center.py  tui.py
tests/: test_audit.py  test_chat.py  test_cli_smoke.py  test_memory.py  test_pipeline_resilience.py  test_report.py  test_state.py
(+19 files in other folders)
