[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlogos-lab"
version = "0.1.0"
description = "A transparent multi-agent research lab for turning ideas into scientific-style reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "langgraph>=0.2",
  "pydantic>=2.7",
  "prompt-toolkit>=3.0",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
openlogos-lab = "salinas_lab.cli:app"
salinas-lab = "salinas_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["salinas_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "B023"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_strict_optional = false
